# RP-Project

./: CMakeLists.txt  main.cpp
src/: exception.cpp  exception.hpp  log.cpp  log.hpp  main.cpp  mainwindow.ui
tutorials/: 1-Grundlagen.cpp  README.md  kleiner_taschenrechner.cpp  pointer_und_variablen.cpp
